# temporal_rw

./: .gitignore  CMakeLists.txt  setup.py
cmake/: TemporalRWConfig.cmake.in
csrc/: continuous_trw.cpp  continuous_trw.h  macros.h  temporal_rw.cpp  temporal_rw.h  version.cpp
csrc/cpu/: continuous_trw_cpu.cpp  continuous_trw_cpu.h  temporal_rw_cpu.cpp  temporal_rw_cpu.h  utils.cpp  utils.h
csrc/cuda/: continuous_trw_cuda.cu  continuous_trw_cuda.h  temporal_rw_cuda.cu  temporal_rw_cuda.h  utils.cu  utils.cuh
temporal_rw/: __init__.py  temporal_rw.py
temporal_walks/: __init__.py  connector.py
test/: test.py
